--- a/src/components/header/Head.css
+++ b/src/components/header/Head.css
@@ -4,17 +4,24 @@ font-size: 24px;
 font-weight: 600;
 }
 
+
 .image-wrapper {
-  max-height: 300px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
 
-
-.carou{
-  margin-right: 0;
-}
-.image-wrapper img {
+.image-container {
+  max-width: 100%;
   max-height: 100%;
-  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel-image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
