--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,5 +1,6 @@
 #topele {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+  padding-bottom: 2rem;
 }
 
 
@@ -8,4 +9,14 @@
   padding: 0;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.image {
+	width: 250px;
+	height: 300px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: auto 100%;
+	border-radius: 10px;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
